<resources>
    <string name="app_name">MaterialTutorial</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="card_image_desc">Image Description</string>
    <string name="card_title">Card Title</string>
    <string name="card_subtitle">Card Subtitle</string>
    <string name="card_action1">Action 1</string>
    <string name="card_action2">Delete</string>
    <string name="action_add">Add</string>
    <string name="nav_bar_item_text">3D Rotation</string>
    <string name="nav_item_img_desc">Navigation item image</string>
    <string name="nav_header_name">First Last</string>
    <string name="nav_header_email">first.last@test.com</string>
    <string name="account_image_desc" />
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
</resources>
