<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIcons">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/nav_header_container"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/account_image"
            android:src="@drawable/ic_account_circle_black_64px"
            android:tint="@color/colorIcons"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/account_image_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_below="@+id/account_image"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_header_name"
                android:text="@string/nav_header_name"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorIcons"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_header_email"
                android:text="@string/nav_header_email"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorIcons"/>


        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/drawer_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>